--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 url: 'rosetintedspectacles'
 baseurl: '//shakna-israel.github.io'
+title: "Rose Tinted Spectacles"
 
 permalink: /:categories/:title/
 
